ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrotrack-ingress
  namespace: agrotrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: agrotrack.local
      http:
        paths:
          - path: /user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /crop/?(.*)
            pathType: Prefix
            backend:
              service:
                name: crop-service
                port:
                  number: 80
